--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="outline0"><strong>Wang Chi Fan, Van</strong></div>
     <div class="outline1"><strong>MG WORK</strong></div>
     <div class="outline2"><strong>MY STORY</strong></div>
-    <div class="outline3"><strong>VISUAL EXPERIMENT</strong></div>
+    <div class="outline3"><strong>EXPERIMENTS</strong></div>
     <div class="outline4"><strong>FREELANCER</strong></div>
     <div class="outline5"><strong>CONTACT ME</strong></div>
     <div class="mainimage">
