--- a/index.html
+++ b/index.html
@@ -17,16 +17,23 @@
 
  
  <div class="line"></div>
-  <div class="outline0"><strong>VAN WANG</strong></div>
-  <div class="outline1"><strong>Motion Designer I FUNNY MAKER</strong></div>
+
+ <nav>
+   <div class="logo">
+    <div class="outline0"><strong>VAN WANG</strong></div>
+    <div class="outline1"><strong>Motion Designer I FUNNY MAKER</strong></div>
+   </div>
+  <div class="links">
     <div class="outline2"><a href="My story.html"style="text-decoration: none" ><strong>MY STORY</strong></a></div>
     <div class="outline3"><a href="Experience.html"style="text-decoration: none" ><strong>EXPERIMENTS</strong></a></div>
     <div class="outline4"><a href="freelancer.html"style="text-decoration: none" ><strong>FREELANCER</strong></a></div>
     <div class="outline5"><a href="contact.html"style="text-decoration: none" ><strong>CONTACT ME</strong></a></div>
   </div>
+ </nav>
+
     <div class="mainimage">
       <a href="https://vimeo.com/543939212">
-    <img src="img/web2 final project.gif" width="1920" height="1080" alt="my portrait"/>
+    <img src="img/web2 final project.gif" alt="my portrait"/>
   </a>
   </div>
 
